# trp

./: .buildinfo  .gitignore  .travis.yml  CMakeLists.txt  README.md  generate-visual-2015-solution.bat  genindex.html  index.html  objects.inv  search.html  searchindex.js
CMake/: FindSDL2_MIXER.cmake  FindSDL2_net.cmake
Data/: data2emscripten.bat  gamedata2visual.bat  settings.xml  trp.data  trp.js
Data/gamedata-cocci/: cocci.xml
Data/gamedata-naked/: main.rsc
Data/gamedata-sample/: animation_scene.rsc  dialog_scene.rsc  game_scene.rsc  gui_scene.rsc  helloworld_scene.rsc  io_scene.rsc  main.rsc  menu_scene.rsc  music_scene.rsc  particle_scene.rsc  physics_scene.rsc  platform_scene.rsc  primitive_scene.rsc  sound_scene.rsc  sprite_scene.rsc  textbox_scene.rsc  tween_scene.rsc
Data/gamedata-shooter/: game_scene.rsc  main.rsc  sheet.xml
Data/helpers/: scene_manager.rsc
Docs/: CMakeLists.txt  Doxyfile
Docs/en/: Home.md  tuto6-button.md  version.txt
Docs/fr/: pandoc.css
Rototo/: CMakeLists.txt  README.md
Rototo/CMake/modules/: FindRototo.cmake  common.cmake
Rototo/Includes/: Animation.h  Application.h  Application_p.h  Atlas.h  Button.h  Button_p.h  Client.h  ComboBox.h  Debug.h  Event.h  Font.h  GUIManager.h  Global.h  Label.h  ListBox.h  Music.h  NetworkManager.h  Object.h  Particles.h  PhysicsManager.h  Primitive.h  Rect.h  ResourceManager.h  Rototo.h  ScriptManager.h  Server.h  Settings.h  SoundManager.h  Sprite.h  TextBox.h  TextManager.h  TiledMap.h  TweenManager.h  Utils.h  Vector2D.h  WatchManager.h  Widget.h
Rototo/Includes/binding/: scriptarray.h  scriptstdstring.h
Rototo/Samples/: CMakeLists.txt
Rototo/Samples/HelloWorld/: CMakeLists.txt  HelloWorld.cpp
Rototo/Sources/: Animation.cpp  Application.cpp  Application.h  Application_p.h  Atlas.cpp  Atlas.h  Button.cpp  Button.h  Button_p.h  CMakeLists.txt  Client.cpp  Client.h  Client_p.h  ComboBox.cpp  ComboBox_p.h  Config.h.in  Debug.cpp  Event.cpp  Event_p.h  Font.cpp  Font.h  Font_p.h  GUIManager.cpp  GUIManager.h  Global.h  Label.cpp  Label.h  ListBox.cpp  ListBox.h  ListBox_p.h  Main.cpp  Music.cpp  Music_p.h  NetworkManager.cpp  NetworkManager.h  Object.cpp  Particles.cpp  Particles.h  PhysicsManager.cpp  Primitive.cpp  (+23 more)
Rototo/Sources/binding/: scriptarray.cpp  scriptarray.h  scriptbuilder.cpp  scriptbuilder.h  scriptdictionary.cpp  scriptdictionary.h  scripthandle.cpp  scripthandle.h  scriptmath.cpp  scriptmath.h  scriptstdstring.cpp
Rototo/data/: settings.xml
Rototo/data/gamedata-sample/: game_scene.rsc  io_scene.rsc  main.rsc  platform.tmx  textbox_scene.rsc  tween_scene.rsc
Rototo/data/gamedata-sample/graphics/: level1.tmx
Rototo/data/gamedata-sample/particles/: snow.xml
Rototo/data/gamedata-shooter/: bullet.rsc
Rototo/data/themes/minimal/: minimal.xml
Rototo/doc/: VERSION.md
Rototo/doc/android/: settings.xml
Rototo/doc/en/: Installation.md  pandoc.css  revisions.md  tuto2-sprite.md
Rototo/doc/fr/: Home.md  LISEZMOI-OSX.md
Rototo/projects/XCode/Rototo/Rototo.xcodeproj/: project.pbxproj
Rototo/projects/XCodeIOS/Rototo/Rototo/: Rototo-Info.plist
Rototo/projects/android/: .cproject  AndroidManifest.xml  build.xml
Rototo/projects/android/jni/: Application.mk  README.md
Rototo/projects/android/jni/src/: Android.mk
Rototo/projects/android/src/org/libsdl/app/: SDLActivity.java
Rototo/src/: Debug.cpp  GUIManager.cpp  GUIManager.h  Global.cpp  Particles.cpp  PhysicsManager.h  Primitive.cpp  Primitives.c  Server.cpp  Server.h  SoundManager.cpp  Sprite.h  TextManager.h  TiledMap.cpp  TiledMap.h  TweenManager.h  Utils.cpp  Utils.h  WatchManager.cpp  Widget.h
Rototo/src/binding/: scriptarray.cpp  scriptbuilder.cpp  scripthandle.h
Rototo/tools/: HowTo.md  copy_win32_dll.py  trp.nsi
Rototo/tools/doc/: extract_api.bat
Rototo/tools/ratata/: callstackwidget.cpp  grepwidget.cpp  mdichild.cpp  mdimainwindow.cpp  myapp.cpp  myicon.icns  myiconrsc.icns  outputwidget.cpp  prefdialog.h
Rototo/tools/ratata_distrib/moc/: README.md
Samples/: CMakeLists.txt
Samples/HelloWorld/: CMakeLists.txt  HelloWorld.cpp  MenuScene.cpp  MenuScene.h  ParticleScene.cpp  ParticleScene.h  SceneManager.cpp  SceneManager.h
Tools/: CMakeLists.txt  build_android.bat  line-report.bat  prepare_osx_version.sh
Tools/doc/: build_doc.bat  build_doc.py  extract_api.sh
Tools/ratata/: CMakeLists.txt  Makefile  RatataD.plist  breakpointwidget.cpp  callstackwidget.cpp  consolewidget.h  dlgnewproject.cpp  errorwidget.cpp  grepwidget.cpp  grepwidget.h  main.cpp  mdichild.cpp  mdichild.h  mdimainwindow.cpp  mdimainwindow.h  myapp.cpp  myapp.h  myapp.rc  outputwidget.h  prefdialog.cpp  projectwidget.cpp  ratata.pro  tcpclient.cpp  watchwidget.cpp
Tools/ratata/qtresources/: timeresources.qrc
Web/: Makefile  conf.py  deploy-ghpages.sh  index.rst  make.bat
Web/getting_started/: build.rst  download.rst  install.rst
Web/introducing_trp/: release_notes.rst  trp_license.rst
Web/tutorials/: index.rst  tuto3-animation.rst  tuto4-sound.rst  tuto5-music.rst  tuto7-listbox.rst  tuto8-io.rst
_sources/getting_started/: build.txt  index.txt  install.txt
_sources/introducing_trp/: about_trp.txt  index.txt  trp_license.txt
_sources/ratata/: index.txt
_sources/tutorials/: tuto1-hello.txt  tuto2-sprite.txt  tuto4-sound.txt  tuto5-music.txt  tuto6-button.txt
getting_started/: build.html  download.html  index.html  install.html
introducing_trp/: about_trp.html  index.html  release_notes.html  trp_license.html
ratata/: index.html
rototo/: CMakeLists.txt  README.md
rototo/data/: LISEZMOI.md
rototo/doc/: VERSION.md
rototo/src/: Animation.cpp  Animation.h  Application.cpp  Application.h  Atlas.cpp  Atlas.h  Button.cpp  Button.h  CMakeLists.txt  Client.cpp  Client.h  ComboBox.cpp  ComboBox.h  Debug.cpp  Debug.h  Font.cpp  Font.h  GUIManager.cpp  GUIManager.h  Global.cpp  Global.h  Label.cpp  Label.h  ListBox.cpp  Main.cpp  (+39 more)
tutorials/: index.html  tuto1-hello.html  tuto2-sprite.html  tuto3-animation.html  tuto4-sound.html  tuto5-music.html  tuto6-button.html  tuto7-listbox.html  tuto8-io.html
(+124 files in other folders)
